Fixed table spacing, added sidebar transitions

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 }
 
 #main-container {
-  width: 90%;
+  height: 100%;
+  width: 100%;
   display: flex;
   gap: 20px;
   justify-content: space-between;
@@ -20,17 +21,23 @@
   width: 100%;
 }
 
+.right-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 table {
   margin-bottom: 20px;
+  width: 90%;
+  height: 100%;
 }
 
 
-
-
-td,
-td div
- {
-  height: 100%;
+th {
+  white-space: nowrap;
+  flex: 1
 }
 
 thead {
@@ -82,14 +89,16 @@ tbody:nth-child(even) {
   background-color: rgb(68, 68, 68);
 }
 
-td {
-  padding: 4px;
-  height: 50px;
-  width: 50px;
-}
-
 tr:first-child {
   height: 20px;
+}
+
+tr, td {
+  height: 55px;
+}
+
+td {
+  min-width: 55px;
 }
 
 td:last-child,
@@ -121,35 +130,100 @@ form input {
 
 
 
-.checkbox-container div {
-  display: flex;
+.shift-checkbox svg {
+  max-width: 70px;
+  max-height: 70px;
+  height: 100%;
+  width: 100%;
+}
+
+.shift-checkbox:hover {
+  background-color: rgba(255, 255, 255, 0.1);
   cursor: pointer;
+}
+
+.shift-checkbox {
+  background-color: rgba(255, 255, 255, 0);
   justify-content: center;
   align-items: center;
+  min-height: 100%;
+  flex: 1;
+  display: flex;
+  padding: 8px;
 }
 
-tbody tr .checkbox-container:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-tbody tr .checkbox-container {
-  background-color: rgba(255, 255, 255, 0);
-}
-
-.checkbox-container div svg{
-  width: 40px;
-  height: 40px;
+td {
   padding: 0;
-  margin: -3px;
+  /* height: 100%; */
 }
 
 .table-footer {
   display: flex;
+  width: 90%;
   justify-content: space-between;
+}
+
+.grand-total p {
+  font-size: clamp(1rem, 2.5vw, 2rem);
+  padding: 0;
+  margin: 0;
+}
+
+.weekly-total-box,
+.week-number-box {
+  font-size: clamp(1rem, 2.5vw, 1.25rem);
+  white-space: nowrap;
+  line-height: normal;
+}
+
+.settings-button {
+  padding: 20px 0 0 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+
+.settings-button svg:hover {
+  cursor: pointer;
+}
+
+.gear-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.x-icon {
+  position: absolute;
+
+  stroke: rgb(36, 36, 36);
+  stroke-width: 1px;
+  bottom: 0px;
+  left: 28px;
+  transition: all ease-in-out 250ms;
+}
+
+#settings-popout {
+  transition: all ease-in-out 250ms;
+  width: 150px;
+  flex: 0;
+  position: relative;
+}
+
+#settings-popout form {
+  position: absolute;
+  width: 150px;
+  left: 0;
+  transition: all ease-in-out 250ms;
 }
 
 @media (max-width: 860px){
   #main-container {
     flex-direction: column;
   }
+}
+
+@media (min-width: 860px){
+
 }
